[package]
name = "rjava"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "rjava"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
class_file = "0.1.0"
byteorder = "1.4.3"
bitflags = "1.3.2"
derive_more = "0.99.17"
log = "0.4.17"
simplelog = "0.12.0-alpha1"
